tests/snapshots/onboarding_wallet_deploy__deploy_mainnet_dry_run_uses_anchor_moniker.snap
---
source: tests/onboarding_wallet_deploy.rs
expression: mainnet_payload
---
{
  "argv": [
    "anchor",
    "deploy",
    "--provider.cluster",
    "mainnet",
    "--program-name",
    "deploy_app"
  ],
  "command": "deploy",
  "dry_run": true,
  "ok": true,
  "program": "deploy_app",
  "target": "mainnet",
  "verify": false
}
