tests/snapshots/onboarding_wallet_deploy__wallet_new_outfile.snap
---
source: tests/onboarding_wallet_deploy.rs
expression: payload
---
{
  "command": "wallet_new",
  "dry_run": false,
  "next_step": "sunscreen wallet airdrop 1 --cluster devnet",
  "ok": true,
  "path": "[WALLET_PATH]",
  "stderr": "",
  "stdout": "pubkey: Fake111111111111111111111111111111111111111\n"
}
